--- a/public/css/programming.css
+++ b/public/css/programming.css
@@ -52,12 +52,12 @@ body {
     text-decoration: none;
     margin-bottom: 5px;
     display: inline-block;
-    --neon: #0000ff;
+    --neon: rgba(0, 0, 255, 0.75);
 }
 #itNav h1 a{
     font-size: 50px;
     font-family: 'Trebuchet MS', sans-serif;
-    text-shadow: 0 0 30px #0000ff;
+    text-shadow: 0 0 30px rgba(0, 0, 255, 0.75);
     margin: 20px;
     text-align: center;
     cursor: pointer;
