--- a/views/programming/experiences.html
+++ b/views/programming/experiences.html
@@ -27,7 +27,33 @@
 <article>
   <h1>Experiences</h1>
   <h3>This page describes my experiences including group projects and more</h3>
-  <!--TODO: THIS PAGE -->
+  <!--TODO: INDAVISUAL DETAILS -->
+  <div class="contentDiv">
+    <p>Through my journey in programming, specifically though my schooling, I have had many opportunities to display, hone, and grow my abilities.</p>
+    <p>Some of these events and experiences include: </p>
+    <ul class="with-dot">
+      <li class="with-dot">
+        2025 Sask Polytech Hackathon
+        <p>This was a coding competition held by Saskatchewan Polytechnic</p>
+      </li>
+      <li class="with-dot">
+        2024/2025 Capstone Project - Sensor
+        <p>This was a project assigned to me and my team with our client and a project</p>
+      </li>
+      <li class="with-dot">
+        2024/2025 Capstone Project - Camera
+        <p>This was a project assigned to me and my team with our client and a project</p>
+      </li>
+      <li class="with-dot">
+        Hillsdale Baptist Church Tech
+        <p>This was a volunteer position at a church that entailed managing a live stream and slides</p>
+      </li>
+      <li class="with-dot">
+        Overall Class Assignments
+        <p>These were a variety of assignemts tha covered front/backend, web dev, Java, C and more</p>
+      </li>
+    </ul>
+  </div>
 </article>
 <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
 <script>
