--- a/views/programming/overview.html
+++ b/views/programming/overview.html
@@ -30,7 +30,20 @@
     <div class="contentDiv">
         <h4>Introduction</h4>
         <p>Hi, my name is Elliott Wagner. Im a 20 y/o who loves sports, computers, and programming.</p>
-        <!--TODO: THIS PAGE -->
+        <img src="/images/img.png" alt="Elliott Wagner's picture">
+        <p>Im from southern Saskatchewan and im looking to get into the world of programming, computers and IT</p>
+        <p>I am someone who is hardworking and very eager to learn as much as I can.</p>
+        <p>Some of the languages/technologies I have learned and used include: </p>
+        <ul>
+            <li class="with-dot">Java</li>
+            <li class="with-dot">HTML, CSS, JS, NodeJS</li>
+            <li class="with-dot">C</li>
+            <li class="with-dot">React</li>
+            <li class="with-dot">Azure, Entra</li>
+            <li class="with-dot">Windows Server/11/10</li>
+        </ul>
+        <p>If you would like to reach out, I do not have social media so email is the best way</p>
+        <p><a href="mailto:elliottjwag@hotmail.com">Contact Me</a></p>
     </div>
 </article>
 <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
